--- a/index.html
+++ b/index.html
@@ -213,15 +213,15 @@
                  <div class="contact">
                     <img src="https://placehold.co/100x100/EFEFEF/333?text=A" alt="Avatar Ana">
                     <div class="contact-info">
-                        <div class="name">Ana (RH)</div>
-                        <div class="last-message">Ok, obrigada!</div>
+                        <div class="name">Daniele Bellese</div>
+                        <div class="last-message">Atualize o Monday!</div>
                     </div>
                 </div>
                  <div class="contact">
                     <img src="https://placehold.co/100x100/EFEFEF/333?text=E" alt="Avatar Equipe">
                     <div class="contact-info">
-                        <div class="name">Equipe Projeto X</div>
-                        <div class="last-message">Mariana: Pessoal, a reunião é às 15h.</div>
+                        <div class="name">Projeto DesignerFlix</div>
+                        <div class="last-message">Guilherme Gomes: Pessoal, a reunião é às 15h.</div>
                     </div>
                 </div>
             </div>
