--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                     </div>
                 </div>
                  <div class="contact">
-                    <img src="https://placehold.co/100x100/EFEFEF/333?text=A" alt="Avatar Ana">
+                    <img src="https://placehold.co/100x100/EFEFEF/333?text=D" alt="Avatar Ana">
                     <div class="contact-info">
                         <div class="name">Daniele Bellese</div>
                         <div class="last-message">Atualize o Monday!</div>
                     </div>
                 </div>
                  <div class="contact">
-                    <img src="https://placehold.co/100x100/EFEFEF/333?text=E" alt="Avatar Equipe">
+                    <img src="https://placehold.co/100x100/EFEFEF/333?text=P" alt="Avatar Equipe">
                     <div class="contact-info">
                         <div class="name">Projeto DesignerFlix</div>
                         <div class="last-message">Guilherme Gomes: Pessoal, a reunião é às 15h.</div>
