--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
                     </div>
                 </div>
                  <div class="contact">
-                    <img src="https://placehold.co/100x100/EFEFEF/333?text=P" alt="Avatar Equipe">
+                    <img src="https://placehold.co/100x100/EFEFEF/333?text=D" alt="Avatar Equipe">
                     <div class="contact-info">
-                        <div class="name">Projeto DesignerFlix</div>
+                        <div class="name">Discutindo IA</div>
                         <div class="last-message">Guilherme Gomes: Pessoal, a reunião é às 15h.</div>
                     </div>
                 </div>
